# Document-Processing-Agent-Service

./: .env.example  .gitignore  ARCHITECTURE.md  Dockerfile  Makefile  README.md  cli.py  docker-compose.yml  pyproject.toml
loadtest/: locustfile.py
src/: agent.py  app.py  config.py  db.py  errors.py  logging.py  metrics.py  prompts.py  routes.py  schemas.py  worker.py
tests/: test_agent.py  test_api.py  test_integration.py
