[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "doc-processing-agent"
version = "0.1.0"
description = "Async document processing agent service"
requires-python = ">=3.12"

dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "sqlalchemy>=2.0",
    "psycopg2-binary>=2.9",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "redis>=5.0",
    "rq>=2.0",
    "litellm>=1.50",
    "structlog>=24.0",
    "httpx>=0.27",
    "pdfplumber>=0.11",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
]
loadtest = [
    "locust>=2.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[project.scripts]
inspect-job = "cli:main"
